fixed squashing issues and ui issues by changing to more responsive units.

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ body {
     background-color: white;
     display: grid;
     gap: 0;
+    font-size: calc(15px + 0.390625vw);
 }
 
 nav {
@@ -56,6 +57,10 @@ nav ul {
     list-style: none;
     padding: 0;
     font-size: 1.2em;
+}
+
+nav li {
+    margin-bottom: 0.6em;
 }
 
 .mobile-hidden {
@@ -104,15 +109,11 @@ main {
     font-weight: bolder;
 }
 
-/*
-The screen smushing issue we are trying to fix on the main page happens at 1300 - 1400px.
-Doesn't happen on other pages.
-Simple solution is to change the media query for our breakpoint to 1400px
-Another solutions is to have multiple breakpoints.
-Finally, another harder solution is to have different stylings at the 900 breakpoint for different pages.
-*/
+#homepage .speed-pattern img {
+    max-width: 100%;
+}
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 75em) {
 
     .mobile-hidden {
         display: block;
@@ -123,13 +124,13 @@ Finally, another harder solution is to have different stylings at the 900 breakp
     }
 
     body {
-        grid-template-columns: 1fr 5fr 2fr;
+        grid-template-columns: 1fr 5fr 18em;
         grid-template-rows: auto 1fr;
         height: 100%;
     }
 
     #homepage {
-        grid-template-columns: 0 6fr 2fr;
+        grid-template-columns: 0 6fr 18em;
         grid-template-rows: auto 1fr;
         height: 100%;
     }
